[package]
name = "chain_chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  "0.7.2"
axum-extra = { version = "0.9.2", features = ["typed-header"] }

tokio = { version = "1.35.0", features = ["full"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.0", features = ["fs"] }
tower = "0.4.13"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = {version="1.0.193",features=["derive"]}
serde_json = "1.0.108"
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

jsonwebtoken = "8.0"
once_cell = "1.19.0"
headers = "0.4.0"
async-trait = "0.1.75"

md5 = "0.7.0"
